--- a/templates/application/application.add.twig
+++ b/templates/application/application.add.twig
@@ -61,9 +61,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Add Application"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('applications') }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('applications') }}">Cancel</a></li>
             </ul>
         </div>
     </form>
