--- a/templates/credentials/credential.add.twig
+++ b/templates/credentials/credential.add.twig
@@ -49,9 +49,9 @@
 
             </ul>
 
-            <ul class="button-list">
+            <ul >
                 <li><input class="btn btn--action" type="submit" value="Add Credential"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('admin.credentials') }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('admin.credentials') }}">Cancel</a></li>
             </ul>
 
         </form>
