--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -14,19 +14,19 @@
     <h1>Credentials - <b>{{ credential.name }}</b></h1>
 
     <div class="details-box">
-        <dl class="split mbn">
-            <dt class="split__title">Name</dt>
-            <dd>{{ credential.name }}</dd>
+        <ul class="mbn">
+            <li>Name</li>
+            <li>{{ credential.name }}</li>
 
-            <dt class="split__title">Type</dt>
-            <dd>
+            <li>Type</li>
+            <li>
                 {% if credential.type == 'aws' %}
                     AWS
                 {% elseif credential.type == 'privatekey' %}
                     Private Key
                 {% endif %}
-            </dd>
-        </dl>
+            </li>
+        </ul>
     </div>
 
     {% if credential.type == 'aws' %}
@@ -93,11 +93,11 @@
         <p>There are no deployment targets associated with these credentials.</p>
     {% endif %}
 
-    <ul class="button-list button-list--half">
+    <ul>
         <li><a class="btn" href="{{ uriFor('admin.credentials') }}">All Credentials</a></li>
 
         {% if isSuper %}
-                <li class="button-list__fixed"><a class="btn btn--destructive" href="{{ uriFor('admin.credential.remove', {'credential': credential.id}) }}">Remove Credentials</a></li>
+                <li><a class="btn btn--destructive" href="{{ uriFor('admin.credential.remove', {'credential': credential.id}) }}">Remove Credentials</a></li>
         {% endif %}
     </ul>
 
