--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -17,7 +17,7 @@
     </p>
 
     {% if credentials %}
-        <table class="table--spacing-medium table--striped table--top-aligned">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr class="tl">
                     <th>ID</th>
@@ -56,7 +56,7 @@
     {% endif %}
 
     {% if isSuper %}
-        <ul class="button-list button-list--half">
+        <ul>
             <li><a class="btn" href="{{ uriFor('admin.credential.add') }}">Add Credentials</a></li>
         </ul>
     {% endif %}
