--- a/templates/environment/environment.add.twig
+++ b/templates/environment/environment.add.twig
@@ -17,9 +17,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Add Environment"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('environments') }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('environments') }}">Cancel</a></li>
             </ul>
 
         </form>
