--- a/templates/environment/environment.edit.twig
+++ b/templates/environment/environment.edit.twig
@@ -17,9 +17,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('environment', {'environment': env.id}) }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('environment', {'environment': env.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
