--- a/templates/permissions/permission.remove.twig
+++ b/templates/permissions/permission.remove.twig
@@ -19,10 +19,10 @@
 
     <h2>Remove the following permissions</h2>
     <div class="details-box">
-        <dl class="split mbn">
+        <ul class="mbn">
 
-            <dt class="split__title">User Type</dt>
-            <dd>
+            <li>User Type</li>
+            <li>
                 {% if user_type.type == 'lead' %}
                     {{ macros.status('Owner', 'notice') }}
                 {% endif %}
@@ -32,22 +32,22 @@
                 {% if user_type.type == 'super' %}
                     {{ macros.status('Super', 'error') }}
                 {% endif %}
-            </dd>
+            </li>
 
             {% if user_type.application %}
-                <dt class="split__title">Application</dt>
-                <dd><a href="{{ uriFor('application', {'application': user_type.application.id}) }}">{{ user_type.application.name }}</a></dd>
+                <li>Application</li>
+                <li><a href="{{ uriFor('application', {'application': user_type.application.id}) }}">{{ user_type.application.name }}</a></li>
             {% endif %}
-        </dl>
+        </ul>
     </div>
 
     <h3>Are you sure?</h3>
     <p>You're about to remove some of this user's permissions. Do you want to continue?</p>
 
     <form class="form-wrapper" method="post">
-        <ul class="button-list">
+        <ul>
             <li><input class="btn btn--destructive" type="submit" value="Remove"></li>
-            <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('admin.permissions') }}">Cancel</a></li>
+            <li><a class="btn" href="{{ uriFor('admin.permissions') }}">Cancel</a></li>
         </ul>
     </form>
 
