--- a/templates/server/server.add.twig
+++ b/templates/server/server.add.twig
@@ -67,9 +67,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Add Server"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('servers') }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('servers') }}">Cancel</a></li>
             </ul>
 
         </div>
