--- a/sass/app/_dash-box.scss
+++ b/sass/app/_dash-box.scss
@@ -70,6 +70,10 @@
 }
 
 .details-box {
+    border: 8px solid $light-grey;
+    padding: msem(1);
+    @include trailer(1);
+
     .fav-box {
         @include breakpoint($bp-small) {
             width: 17em;
