--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -54,9 +54,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('application', {'application': application.id}) }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('application', {'application': application.id}) }}">Cancel</a></li>
             </ul>
         </div>
 
