--- a/templates/application/application.permission.remove.twig
+++ b/templates/application/application.permission.remove.twig
@@ -46,9 +46,9 @@
 
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--destructive" type="submit" value="Revoke Permissions"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('application', {'application': application.id}) }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('application', {'application': application.id}) }}">Cancel</a></li>
             </ul>
         </form>
     </div>
@@ -59,16 +59,16 @@
 
 {% block meta %}
     <div class="details-box">
-        <dl class="split">
-            <dt class="split__title">Name</dt>
-            <dd>{{ application.name }}</dd>
+        <ul>
+            <li>Name</li>
+            <li>{{ application.name }}</li>
 
-            <dt class="split__title">Identifier</dt>
-            <dd>{{ application.key }}</dd>
+            <li>Identifier</li>
+            <li>{{ application.key }}</li>
 
-            <dt class="split__title">GitHub Source</dt>
-            <dd>{{ macros.gitsource(application) }}</dd>
-        </dl>
+            <li>GitHub Source</li>
+            <li>{{ macros.gitsource(application) }}</li>
+        </ul>
     </div>
 {% endblock %}
 
