--- a/templates/encrypted-configuration/encrypted.add.twig
+++ b/templates/encrypted-configuration/encrypted.add.twig
@@ -56,9 +56,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Add Encrypted Property"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">Cancel</a></li>
             </ul>
         </form>
     </div>
