--- a/templates/organization/organization.add.twig
+++ b/templates/organization/organization.add.twig
@@ -31,9 +31,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Add Organization"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('applications') }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('applications') }}">Cancel</a></li>
             </ul>
         </form>
     </div>
