--- a/templates/organization/organization.edit.twig
+++ b/templates/organization/organization.edit.twig
@@ -22,9 +22,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('organization', {'organization': organization.id}) }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('organization', {'organization': organization.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
