--- a/templates/permissions/permission.add.twig
+++ b/templates/permissions/permission.add.twig
@@ -76,9 +76,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Add Permissions"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('users.page1') }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('users.page1') }}">Cancel</a></li>
             </ul>
 
         </form>
