--- a/templates/server/server.edit.twig
+++ b/templates/server/server.edit.twig
@@ -69,9 +69,9 @@
                 </li>
             </ul>
 
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('server', {'server': server.id}) }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('server', {'server': server.id}) }}">Cancel</a></li>
             </ul>
         </div>
 
