--- a/templates/user/github.token.remove.twig
+++ b/templates/user/github.token.remove.twig
@@ -11,9 +11,9 @@
         <p>This will revoke GitHub authorization and disable updates to GitHub when you deploy a build.</p>
 
         <form class="form-wrapper" method="post">
-            <ul class="button-list">
+            <ul>
                 <li><input class="btn btn--destructive" type="submit" value="Remove"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="javascript:history.go(-1)">Cancel</a></li>
+                <li><a class="btn" href="javascript:history.go(-1)">Cancel</a></li>
             </ul>
         </form>
     </div>
